--- a/index.html
+++ b/index.html
@@ -4,53 +4,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tacos Perry !?!</title>
+    <title>Tacos Perry !!</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="jumbotron mt-3">
-            <h1>Tacos Perry  !?!</h1>
-            <p class="lead">This example is a quick exercise to illustrate how the bottom navbar works.</p>
-            <a class="btn btn-lg btn-primary" href="/docs/4.5/components/navbar/" role="button">View navbar docs
-                &raquo;</a>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Taqueria, Tacos Perry!</h1>
         </div>
     </div>
-    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Bottom navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-                <li class="nav-item dropup">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown10" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Dropup</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="/node_modules/jquery/dist/jquery.slim.js" ></script>
-    <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h3>Tacos Perry</h3>
+                <p>Taqueria de Venta de todo tipo de comida</p>
+            </div>
+            <div class="col-sm-4">
+                <h3>Ubicación</h3>
+                <p>Calle Bilbao esquina con Bogota - Servicio a Domicilio </p>
+            </div>
+            <div class="col-sm-4">
+                <h3>Videos</h3>
+                <p>Disfruta nuestro canal</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div>
+                    <h4>Tacos</h4>
+                    <p>Tacos de carne asada y mixtos en tortilla de harina y maiz</p>
+                </div>
+                <div><button class="btn btn-primary btn-ver">Ver detalles</button></div>
+            </div>
+            <div class="col-sm-4">
+                <div>
+                    <h4>Quesadillas</h4>
+                    <p>Quesadillas de carne asada y mixtas en tortilla de maiz</p>
+                </div>
+                <div><button class="btn btn-primary btn-ver">Ver detalles</button></div>
+            </div>
+            <div class="col-sm-4">
+                <div>
+                    <h4>Panchos</h4>
+                    <p>Panchos: nachos con queso amarillo, frijoles y carne asada</p>
+                </div>
+                <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
+            </div>
+            <div class="col-sm-4">
+                <div>
+                    <h4>Más...</h4>
+                    <p>Ademas venta de tostadas de carne asada y mixtas</p>
+                </div>
+                <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
+            </div>
+            <div class="col-sm-4">
+                <div>
+                    <h4>Más...</h4>
+                    <p>Ademas venta de tostadas de carne asada y mixtas</p>
+                </div>
+                <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
+            </div>
+            <div class="col-sm-4">
+                <div>
+                    <h4>Más 2...</h4>
+                    <p>Ademas venta de tostadas de carne asada y mixtas</p>
+                </div>
+                <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
+            </div>
+            <div class="col-sm-4">
+                <div>
+                    <h4>Más 3...</h4>
+                    <p>Ademas venta de tostadas de carne asada y mixtas</p>
+                </div>
+                <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
