--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tacos Perry !!</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/principal.css">
 </head>
 
 <body>
@@ -31,50 +32,50 @@
                 <p>Disfruta nuestro canal</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-4">
+        <div class="d-flex flex-wrap ">
+            <div class="d-flex flex-column card-design justify-content-between">
                 <div>
                     <h4>Tacos</h4>
                     <p>Tacos de carne asada y mixtos en tortilla de harina y maiz</p>
                 </div>
                 <div><button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
-            <div class="col-sm-4">
+            <div class="d-flex flex-column card-design justify-content-between">
                 <div>
                     <h4>Quesadillas</h4>
                     <p>Quesadillas de carne asada y mixtas en tortilla de maiz</p>
                 </div>
                 <div><button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
-            <div class="col-sm-4">
+            <div class="d-flex flex-column card-design justify-content-between">
                 <div>
                     <h4>Panchos</h4>
                     <p>Panchos: nachos con queso amarillo, frijoles y carne asada</p>
                 </div>
                 <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
-            <div class="col-sm-4">
+            <div class="d-flex flex-column card-design justify-content-between">
                 <div>
                     <h4>Más...</h4>
                     <p>Ademas venta de tostadas de carne asada y mixtas</p>
                 </div>
                 <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
-            <div class="col-sm-4">
+            <div class="d-flex flex-column card-design justify-content-between">
                 <div>
                     <h4>Más...</h4>
                     <p>Ademas venta de tostadas de carne asada y mixtas</p>
                 </div>
                 <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
-            <div class="col-sm-4">
+            <div class="d-flex flex-column card-design justify-content-between">
                 <div>
                     <h4>Más 2...</h4>
                     <p>Ademas venta de tostadas de carne asada y mixtas</p>
                 </div>
                 <div> <button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
-            <div class="col-sm-4">
+            <div class="d-flex flex-column card-design justify-content-between">
                 <div>
                     <h4>Más 3...</h4>
                     <p>Ademas venta de tostadas de carne asada y mixtas</p>
@@ -83,7 +84,29 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <div class="row">
+            <div class="col-sm-4 " style="font-size:larger;">
+                <a href="http://www.facebook.com">Facebook</a>
+                <a href="http://www.instagram.com">Instagram</a>
+                <a href="http://www.twtter.com">Twtter</a>
+            </div>
+            <div class="col-sm-4">
+                <address>
+                    <h5>Nuestra Ubicación</h5>
+                    <div>Calle Bilbao esquina con Bogota</div>
+                    <div>Col. Los Fresnos</div>
+                    <div>Nuevo Laredo, Tamaulipas, Mexico</div>
+                </address>
+            </div>
+            <div class="col-sm-4   align-items-end" style="font-size:larger;">
+                <a href="#">Contactanos</a>
+                <a href="#">Nosotros</a>
+                <a href="#">Menu</a>
+                <a href="#">Galeria</a>
+            </div>
+        </div>
+</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
