Incorporando la Navegacion en la pag. web y archivos destino

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <a class="navbar-brand" href="./index.html">Tacos Perry!</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link" href="./index.html" >Inicio <span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="./nosotros.html" >Nosotros</a> </li>
+            <li class="nav-item"><a class="nav-link" href="./menu.html" >Menu</a> </li>
+            <li class="nav-item"><a class="nav-link" href="./Galeria.html" >Galeria</a> </li>
+            <li class="nav-item"><a class="nav-link" href="./contacto.html" >Contacto</a> </li>
+            </ul>
+        </div>
+    </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
@@ -18,6 +34,11 @@
     </div>
 
     <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">Inicio</li>
+            </ol>
+          </nav>
         <div class="row">
             <div class="col-sm-4">
                 <h3>Tacos Perry</h3>
@@ -106,7 +127,7 @@
                 <a href="#">Galeria</a>
             </div>
         </div>
-</footer>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
