--- a/menu.html
+++ b/menu.html
@@ -18,16 +18,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" href="./index.html" >Inicio <span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="./nosotros.html" >Nosotros</a> </li>
-            <li class="nav-item"><a class="nav-link" href="./menu.html" >Menu</a> </li>
-            <li class="nav-item"><a class="nav-link" href="./Galeria.html" >Galeria</a> </li>
-            <li class="nav-item"><a class="nav-link" href="./contacto.html" >Contacto</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Inicio <span
+                            class="sr-only">(current)</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./menu.html">Menu</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./Galeria.html">Galeria</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a> </li>
             </ul>
         </div>
     </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron-seccion">
         <div class="container">
             <h1>Taqueria, Tacos Perry!</h1>
         </div>
@@ -41,9 +42,60 @@
             </ol>
         </nav>
         <div class="row">
-             
+            <table class="table table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Tacos</th>
+                        <th scope="col">Quesadillas</th>
+                        <th scope="col">Panchos</th>
+                        <th scope="col">Sodas</th>
+                        <th scope="col">Platillos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><span class="oi oi-star"></span></td>
+                        <td>$100</td>
+                        <td>$200</td>
+                        <td>$300</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><span class="oi oi-star"></span> <span class="oi oi-star"></span></td>
+                        <td>$50</td>
+                        <td>$100</td>
+                        <td>$200</td>
+                        <td>$300</td>
+                    </tr>
+                    <tr>
+                        <td><span class="oi oi-star"></span> <span class="oi oi-star"></span> <span
+                                class="oi oi-star"></span></td>
+                        <td>$72</td>
+                        <td>$100</td>
+                        <td>$250</td>
+                        <td>$350</td>
+                    </tr>
+                    <tr>
+                        <td><span class="oi oi-star"></span> <span class="oi oi-star"></span> <span
+                                class="oi oi-star"></span> <span class="oi oi-star"></span></td>
+                        <td>$100</td>
+                        <td>$200</td>
+                        <td>$300</td>
+                        <td>$400</td>
+                    </tr>
+                    <tr>
+                        <td><span class="oi oi-star"></span> <span class="oi oi-star"> </span> <span
+                                class="oi oi-star"></span> <span class="oi oi-star"></span> <span
+                                class="oi oi-star"></span></td>
+                        <td>$82</td>
+                        <td>$100</td>
+                        <td>$350</td>
+                        <td>$400</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        
+
     </div>
     <footer>
         <div class="row">
