--- a/index.html
+++ b/index.html
@@ -7,38 +7,40 @@
     <title>Tacos Perry !!</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/principal.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-        <a class="navbar-brand" href="./index.html">Tacos Perry!</a>
+        <a class="navbar-brand" href="./index.html"><i class="fa fa-cutlery" aria-hidden="true"></i> Tacos Perry!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" href="./index.html" >Inicio <span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="./nosotros.html" >Nosotros</a> </li>
-            <li class="nav-item"><a class="nav-link" href="./menu.html" >Menu</a> </li>
-            <li class="nav-item"><a class="nav-link" href="./Galeria.html" >Galeria</a> </li>
-            <li class="nav-item"><a class="nav-link" href="./contacto.html" >Contacto</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Inicio <span
+                            class="sr-only">(current)</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./menu.html">Menu</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./Galeria.html">Galeria</a> </li>
+                <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a> </li>
             </ul>
         </div>
     </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1>Taqueria, Tacos Perry!</h1>
+            <h1> <i class="fa fa-cutlery" aria-hidden="true"></i> Taqueria, Tacos Perry!</h1>
         </div>
     </div>
 
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item active" aria-current="page">Inicio</li>
+                <li class="breadcrumb-item active" aria-current="page">Inicio</li>
             </ol>
-          </nav>
+        </nav>
         <div class="row">
             <div class="col-sm-4">
                 <h3>Tacos Perry</h3>
@@ -55,16 +57,18 @@
         </div>
         <div class="d-flex flex-wrap ">
             <div class="d-flex flex-column card-design justify-content-between">
-                <div>
-                    <h4>Tacos</h4>
-                    <p>Tacos de carne asada y mixtos en tortilla de harina y maiz</p>
+                <img class="card-img-top" src="img/tacos.jpg" alt="ImagenTacos" />
+                <div class="card-body">
+                    <h4 class="card-tile">Tacos</h4>
+                    <p class="card-text">Tacos de carne asada y mixtos en tortilla de harina y maiz</p>
                 </div>
                 <div><button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
             <div class="d-flex flex-column card-design justify-content-between">
-                <div>
-                    <h4>Quesadillas</h4>
-                    <p>Quesadillas de carne asada y mixtas en tortilla de maiz</p>
+                <img class="card-img-top" src="img/quesadilla.jpg" alt="ImagenTacos" />
+                <div class="card-body">
+                    <h4 class="card-tile">Quesadillas</h4>
+                    <p class="card-text">Quesadillas de carne asada y mixtas en tortilla de maiz</p>
                 </div>
                 <div><button class="btn btn-primary btn-ver">Ver detalles</button></div>
             </div>
@@ -107,23 +111,23 @@
     </div>
     <footer>
         <div class="row">
-            <div class="col-sm-4 " style="font-size:larger;">
-                <a href="http://www.facebook.com">Facebook</a>
-                <a href="http://www.instagram.com">Instagram</a>
-                <a href="http://www.twtter.com">Twtter</a>
+            <div class="col-sm-4 d-flex flex-column" style="font-size:larger;">
+                <a href="http://www.facebook.com"><i class="fa fa-facebook"></i> Facebook</a><br />
+                <a href="http://www.instagram.com"><i class="fa fa-instagram"></i> Instagram</a><br />
+                <a href="http://www.twtter.com"><i class="fa fa-twitter"></i> Twtter</a>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 ">
                 <address>
-                    <h5>Nuestra Ubicación</h5>
+                    <h5><i class="fa fa-map-marker" aria-hidden="true"></i> Nuestra Ubicación</h5>
                     <div>Calle Bilbao esquina con Bogota</div>
                     <div>Col. Los Fresnos</div>
                     <div>Nuevo Laredo, Tamaulipas, Mexico</div>
                 </address>
             </div>
-            <div class="col-sm-4   align-items-end" style="font-size:larger;">
-                <a href="#">Contactanos</a>
-                <a href="#">Nosotros</a>
-                <a href="#">Menu</a>
+            <div class="col-sm-4 d-flex flex-column align-items-end" style="font-size:larger;">
+                <a href="#">Contactanos</a><br />
+                <a href="#">Nosotros</a><br />
+                <a href="#">Menu</a><br />
                 <a href="#">Galeria</a>
             </div>
         </div>
