--- a/index.html
+++ b/index.html
@@ -28,12 +28,60 @@
             </ul>
         </div>
     </nav>
+    <section class="banner">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/B01.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption ">
+                        <h1><img src="img/icon-taco-256.png" width="64" height="64" alt="logo" /> Tacos Perry! - PANCHOS
+                        </h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/B02.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption">
+                        <h1><img src="img/icon-taco-256.png" width="64" height="64" alt="logo" /> Tacos Perry! -
+                            BURRITOS</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/B03.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption">
+                        <h1> <img src="img/icon-taco-256.png" width="64" height="64" alt="logo" />Tacos Perry! - TACOS
+                        </h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/B04.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption">
+                        <h1> <img src="img/icon-taco-256.png" width="64" height="64" alt="logo" />Tacos Perry! - TACOS
+                        </h1>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </section>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <!-- <div class="jumbotron">
         <div class="container">
             <h1> <i class="fa fa-cutlery" aria-hidden="true"></i> Taqueria, Tacos Perry!</h1>
         </div>
-    </div>
+    </div> -->
 
     <div class="container">
         <nav aria-label="breadcrumb">
@@ -138,5 +186,10 @@
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
+<script>
+    $('.carousel').carousel({
+        interval: 6000
+    })
+</script>
 
 </html>
